1Lab/k8s/serviceitem/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vader-sentiment-svc
spec:
  selector:
    app: vader-sentiment
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
  type: ClusterIP
