1Lab/k8s/serviceitem/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vader-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: vader-sentiment-svc
                port:
                  number: 80
